test/deprecated/IO/specailWritersReturnErrorMessage/wrbWritef.good
wrbWritef.chpl:4: error: illegal use of boolean return value from 'writef'. Note: this functionality is deprecated; recompile with -sWritersReturnBool=true to continue using the deprecated behavior.
